--- a/app/src/main/res/layout/fragment_blocked.xml
+++ b/app/src/main/res/layout/fragment_blocked.xml
@@ -4,11 +4,12 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TextView
+        <androidx.recyclerview.widget.RecyclerView
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:gravity="center"
-            android:text="BLOCKED"
+            android:id="@+id/blockedRv"
+            android:padding="@dimen/spacing_minimum_4dp"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
