--- a/app/src/main/res/layout/fragment_blocked.xml
+++ b/app/src/main/res/layout/fragment_blocked.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
     <data/>
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -10,6 +10,15 @@
             android:gravity="center"
             android:id="@+id/blockedRv"
             android:padding="@dimen/spacing_minimum_4dp"
+            />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:src="@drawable/ic_baseline_add_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="@dimen/spacing_small_16dp"
+            android:id="@+id/fab"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
